<?xml version="1.0"?>
<package format="2">
<name>diff_drive_kinematics</name>
<version>0.0.0</version>
<description>This is a differential drive kinematics example package</description>
<maintainer email="micho@todo.todo">micho</maintainer>
<license>TODO</license>
<buildtool_depend>catkin</buildtool_depend>
<depend>geometry_msgs</depend>
<depend>roscpp</depend>
<depend>tf</depend>
<depend>std_msgs</depend>
</package>
